Changes to product page

--- a/HomePage.html
+++ b/HomePage.html
@@ -28,17 +28,17 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <a  onclick="window.location.href='ProductsFrozen.html'">Frozen food</a>
-            <a href="#">Pharmacy</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Pharmacy</a>
             <a onclick="window.location.href='Products.html'">Grocery</a>
-            <a href="#">Household</a>
-            <a href="#">Liqour</a>
-            <a href="#">Beverages</a>
-            <a href="#">Homeware</a>
-            <a href="#">chilled</a>
-            <a href="#">Vegitables</a>
-            <a href="#">Meat</a>
-            <a href="#">Fish</a>
-            <a href="#">Fruits</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Household</a>
+            <a onclick="window.location.href='Products.html'">Liqour</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Beverages</a>
+            <a onclick="window.location.href='Products.html'">Homeware</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">chilled</a>
+            <a onclick="window.location.href='Products.html'">Vegitables</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Meat</a>
+            <a onclick="window.location.href='Products.html'">Fish</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Fruits</a>
         </div>
     </div>
     <!-- Top Navigation -->
@@ -76,16 +76,16 @@
         <p id="category_title"><b> CATEGORIES </b></p>
         <div class="categories_menu">
             <span class="fas fa-ice-cream fa-3x circle-icon" onclick="window.location.href='ProductsFrozen.html'"></span>
-            <span class="fas fa-notes-medical fa-3x circle-icon" > </span>
+            <span class="fas fa-notes-medical fa-3x circle-icon" onclick="window.location.href='Products.html'"> </span>
             <span class="fas fa-shopping-bag fa-3x circle-icon" onclick="window.location.href='Products.html'"></span>
-            <span class="fas fa-chair fa-3x circle-icon"></span>
-            <span class="fas fa-glass-martini-alt fa-3x circle-icon"></span>
-            <span class="fas fa-wine-bottle fa-3x circle-icon"></span>
-            <span class="fas fa-utensils fa-3x circle-icon"></span>
-            <span class="fas fa-icicles fa-3x circle-icon"></span>
-            <span class="fas fa-carrot fa-3x circle-icon"></span>
-            <span class="fas fa-drumstick-bite fa-3x circle-icon"></span>
-            <span class="fas fa-fish fa-3x circle-icon"></span>
+            <span class="fas fa-chair fa-3x circle-icon" onclick="window.location.href='ProductsFrozen.html'"></span>
+            <span class="fas fa-glass-martini-alt fa-3x circle-icon" onclick="window.location.href='ProductsFrozen.html'"></span>
+            <span class="fas fa-wine-bottle fa-3x circle-icon" onclick="window.location.href='ProductsFrozen.html'"></span>
+            <span class="fas fa-utensils fa-3x circle-icon" onclick="window.location.href='Products.html'"></span>
+            <span class="fas fa-icicles fa-3x circle-icon" onclick="window.location.href='ProductsFrozen.html'"></span>
+            <span class="fas fa-carrot fa-3x circle-icon" onclick="window.location.href='Products.html'"></span>
+            <span class="fas fa-drumstick-bite fa-3x circle-icon" onclick="window.location.href='ProductsFrozen.html'"></span>
+            <span class="fas fa-fish fa-3x circle-icon" onclick="window.location.href='Products.html'"></span>
             <span class="fas fa-apple-alt fa-3x circle-icon"></span>
             <br>
             <p id="categories_type"> Frozen food &emsp;Pharmacy&emsp;&emsp; Grocery&emsp;&emsp;&emsp;
@@ -99,8 +99,8 @@
 <!--    Flash sales-->
     <div data-role="main">
     <p id="offers_title"><b>FLASH SALES</b></p>
-    <div class="flash" style="background-color: lightgrey">
-        <div  style="background-color: darkred">
+    <div class="flash" style="background-image: url('images/Blue-Background.jpg'); ">
+        <div  style="background-color: #f28500">
             <p id="countDown"></p>
         </div>
         <div class="card c1" >
