--- a/IceCreamProductPage.html
+++ b/IceCreamProductPage.html
@@ -31,18 +31,18 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="#">Frozen food</a>
-            <a href="#">Pharmacy</a>
+            <a  onclick="window.location.href='ProductsFrozen.html'">Frozen food</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Pharmacy</a>
             <a onclick="window.location.href='Products.html'">Grocery</a>
-            <a href="#">Household</a>
-            <a href="#">Liqour</a>
-            <a href="#">Beverages</a>
-            <a href="#">Homeware</a>
-            <a href="#">chilled</a>
-            <a href="#">Vegitables</a>
-            <a href="#">Meat</a>
-            <a href="#">Fish</a>
-            <a href="#">Fruits</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Household</a>
+            <a onclick="window.location.href='Products.html'">Liqour</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Beverages</a>
+            <a onclick="window.location.href='Products.html'">Homeware</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">chilled</a>
+            <a onclick="window.location.href='Products.html'">Vegitables</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Meat</a>
+            <a onclick="window.location.href='Products.html'">Fish</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Fruits</a>
         </div>
     </div>
     <!-- Top Navigation -->
