--- a/NoodleProductPage.html
+++ b/NoodleProductPage.html
@@ -31,18 +31,18 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a  onclick="window.location.href='ProductsFrozen.html'">Frozen food</a>
-            <a onclick="window.location.href='ProductsFrozen.html'">Pharmacy</a>
+            <a href="#">Frozen food</a>
+            <a href="#">Pharmacy</a>
             <a onclick="window.location.href='Products.html'">Grocery</a>
-            <a onclick="window.location.href='ProductsFrozen.html'">Household</a>
-            <a onclick="window.location.href='Products.html'">Liqour</a>
-            <a onclick="window.location.href='ProductsFrozen.html'">Beverages</a>
-            <a onclick="window.location.href='Products.html'">Homeware</a>
-            <a onclick="window.location.href='ProductsFrozen.html'">chilled</a>
-            <a onclick="window.location.href='Products.html'">Vegitables</a>
-            <a onclick="window.location.href='ProductsFrozen.html'">Meat</a>
-            <a onclick="window.location.href='Products.html'">Fish</a>
-            <a onclick="window.location.href='ProductsFrozen.html'">Fruits</a>
+            <a href="#">Household</a>
+            <a href="#">Liqour</a>
+            <a href="#">Beverages</a>
+            <a href="#">Homeware</a>
+            <a href="#">chilled</a>
+            <a href="#">Vegitables</a>
+            <a href="#">Meat</a>
+            <a href="#">Fish</a>
+            <a href="#">Fruits</a>
         </div>
     </div>
     <!-- Top Navigation -->
@@ -82,17 +82,17 @@
 
                     <div class="w3-white w3-text-grey w3-card -4">
                         <div class="w3-container">
-                            <h2 class="product-title">Chicken Keives</h2>
-                            <span class="product-id">9994</span>
+                            <h2 class="product-title">Magee Noodles 200g</h2>
+                            <span class="product-id">994</span>
 
-                            <img class="card-img" src="images/keives.jpg" style="width:100%" alt="Avatar">
+                            <img class="card-img" src="images/noodles.jpg" style="width:100%" alt="Avatar">
                         </div>
                         <div class="w3-container">
                             <hr>
                             <table style="width: 100%">
                                 <tr>
                                     <td>
-                                        <h4 class="promo-item-text">LKR 400.00</h4>
+                                        <h4 class="promo-item-text">LKR 100.00</h4>
                                         <p class ="promo-off">10% Off</p>
 
                                     </td>
@@ -159,7 +159,7 @@
 
                     <div class="w3-container w3-card w3-white w3-margin-bottom">
                         <h3 class="product-title">Description</h3>
-                        <p id="category-text"><span>Category</span> : Frozen Food</a></p>
+                        <p id="category-text"><span>Category</span> : Grocery</a></p>
                         <p id="availability-text"><span>Availibility</span> : In Stock</a></p>
                         <br>
 
