--- a/Products.html
+++ b/Products.html
@@ -168,7 +168,7 @@
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/noodles.jpg" alt="">
+                                <img class="card-img" src="images/noodles.jpg" alt="" onclick="window.location.href='NoodleProductPage.html'">
                                 <span class="product-id">994</span>
                             </div>
                             <div>
