--- a/Login.html
+++ b/Login.html
@@ -37,13 +37,14 @@
 		<div class="container h-100">
 			<div class="blog-banner">
 				<div class="text-center">
-					<h1>Login</h1>
-					<nav aria-label="breadcrumb" class="banner-breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Login</li>
-            </ol>
-          </nav>
+                    <h2 id="qr_title"><b>Login</b></h2>
+                    <br>
+<!--					<nav aria-label="breadcrumb" class="banner-breadcrumb">-->
+<!--            <ol class="breadcrumb">-->
+<!--              <li class="breadcrumb-item"><a href="#">Home</a></li>-->
+<!--              <li class="breadcrumb-item active" aria-current="page">Login</li>-->
+<!--            </ol>-->
+<!--          </nav>-->
 				</div>
 			</div>
     </div>
