--- a/Promotions.html
+++ b/Promotions.html
@@ -28,18 +28,18 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="#">Frozen food</a>
-            <a href="#">Pharmacy</a>
+            <a  onclick="window.location.href='ProductsFrozen.html'">Frozen food</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Pharmacy</a>
             <a onclick="window.location.href='Products.html'">Grocery</a>
-            <a href="#">Household</a>
-            <a href="#">Liqour</a>
-            <a href="#">Beverages</a>
-            <a href="#">Homeware</a>
-            <a href="#">chilled</a>
-            <a href="#">Vegitables</a>
-            <a href="#">Meat</a>
-            <a href="#">Fish</a>
-            <a href="#">Fruits</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Household</a>
+            <a onclick="window.location.href='Products.html'">Liqour</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Beverages</a>
+            <a onclick="window.location.href='Products.html'">Homeware</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">chilled</a>
+            <a onclick="window.location.href='Products.html'">Vegitables</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Meat</a>
+            <a onclick="window.location.href='Products.html'">Fish</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Fruits</a>
         </div>
     </div>
     <!-- Top Navigation -->
@@ -86,14 +86,13 @@
                                 <h5>Daawat Basmati Rice</h5>
                                 <p class = "promo-item-text"><b>LKR 500.00</b></p>
                                 <p class ="promo-off">10% Off</p>
-                                <button class="btn warning" id="cart-btn1">Add to Cart</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/noodles.jpg" alt="">
+                                <img class="card-img" src="images/noodles.jpg" alt="" onclick="window.location.href='NoodleProductPage.html'">
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -104,7 +103,6 @@
                                 <h5>Magee Noodles 200g</h5>
                                 <p class = "promo-item-text"><b>LKR 100.00</b></p>
                                 <p class ="promo-off">10% Off</p>
-                                <button class="btn warning" id="cart-btn2">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -122,7 +120,6 @@
                                 <h5>Heinz Ketchup 500ml</h5>
                                 <p class = "promo-item-text"><b>LKR 800.00</b></p>
                                 <p class ="promo-off">10% Off</p>
-                                <button class="btn warning" id="cart-btn3">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -140,7 +137,6 @@
                                 <h5>Chilly 71g</h5>
                                 <p class = "promo-item-text"><b>LKR 70.00</b></p>
                                 <p class ="promo-off">10% Off</p>
-                                <button class="btn warning" id="cart-btn4">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -151,6 +147,24 @@
         <!-- ================ trending product section end ================= -->
 
 
+    </div>
+
+    <div data-role="main" class="ui-content">
+        <button class="btn warning" id="login-btn">PLAY GAME</button>
+        <!-- ================ trending product section start ================= -->
+        <section class="section-margin calc-60px">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 col-xl-3">
+                        <div class="card text-center card-product products">
+                            <div class="card-product__img">
+                                <img class="card-img" src="images/game.jfif" alt="" onclick="window.location.href='gamee.html'">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <div data-role="main" class="ui-content">
