--- a/Register.html
+++ b/Register.html
@@ -44,12 +44,14 @@
 		<div class="container h-100">
 			<div class="blog-banner">
 				<div class="text-center">
-					<nav aria-label="breadcrumb" class="banner-breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Register</li>
-            </ol>
-          </nav>
+                    <h2 id="qr_title"><b>Regsiter</b></h2>
+                    <br>
+<!--					<nav aria-label="breadcrumb" class="banner-breadcrumb">-->
+<!--            <ol class="breadcrumb">-->
+<!--              <li class="breadcrumb-item"><a href="#">Home</a></li>-->
+<!--              <li class="breadcrumb-item active" aria-current="page">Register</li>-->
+<!--            </ol>-->
+<!--          </nav>-->
 				</div>
 			</div>
     </div>
