--- a/qr.html
+++ b/qr.html
@@ -214,7 +214,7 @@
                     <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user" onclick="window.location.href='Login.html'"></i>
+                    <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
                     <i class="fas fa-heart heart-button" onclick="window.location.href='WishListPage.html'"></i>
