--- a/CartPage.html
+++ b/CartPage.html
@@ -74,10 +74,10 @@
                 <tr>
                     <td>
                         <label for="promocode" id="promocode-label"></label>
-                        <input type="text" name="promocode" id="promocode" placeholder="Apply promo code here">
+                        <input type="text" name="promocode" id="promocode" class="promo-code" placeholder="Apply promo code here">
                     </td>
                     <td>
-                        <button class="btn info" id="apply-promo-btn">Apply</button>
+                        <button class="btn info apply-promo-btn" id="apply-promo-btn">Apply</button>
                     </td>
                 </tr>
             </table>
@@ -98,8 +98,8 @@
 
                     <td id="values">
                         <p class="sub-total">LKR 0 </p>
-                        <p class="code_discount">LKR 0</p>
-                        <p class="point_discount"></p>
+                        <p class="code_discount">.</p>
+                        <p class="point_discount">.</p>
                     </td>
                 </tr>
                 <br>
