Changes to product page

--- a/PaymentPage.html
+++ b/PaymentPage.html
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                         <br>
-                        <button onclick="window.location.href='RiceProductPage.html'" class="btn warning submit-rating"
+                        <button onclick="window.location.href='HomePage.html'" class="btn warning submit-rating"
                                 id="back-btn">Submit
                         </button>
                     </div>
