--- a/Register.html
+++ b/Register.html
@@ -27,35 +27,6 @@
     <div align="center" class="header">
         <img class="logo" src="sss/images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
     </div>
-    <div class="banner">
-        <table>
-            <tr>
-                <td>
-                    <i class="fas fa-shopping-bag" id="promotion_icon"></i>
-                </td>
-                <td>
-                    <div class="slogan">DEBUT OF ULTIMATE MARKETING</div>
-                </td>
-            </tr>
-        </table>
-    </div>
-    
-    <section class="blog-banner-area" id="category">
-		<div class="container h-100">
-			<div class="blog-banner">
-				<div class="text-center">
-                    <h2 id="qr_title"><b>Regsiter</b></h2>
-                    <br>
-<!--					<nav aria-label="breadcrumb" class="banner-breadcrumb">-->
-<!--            <ol class="breadcrumb">-->
-<!--              <li class="breadcrumb-item"><a href="#">Home</a></li>-->
-<!--              <li class="breadcrumb-item active" aria-current="page">Register</li>-->
-<!--            </ol>-->
-<!--          </nav>-->
-				</div>
-			</div>
-    </div>
-	</section>
 
 
    <!--================Login Box Area =================-->
@@ -65,9 +36,9 @@
             <div class="col-lg-6">
                 <div class="login_box_img">
                     <div class="hover">
-                        <h4>Already have an account?</h4>
-                        <p>There are advances being made in science and technology everyday, and a good example of this is the</p>
-                        <a class="button button-account" href="login.html">Login Now</a>
+                        <h2 class="h2">Already have an account?</h2>
+                        <p class="description">Why wait hurry and login to enjoy the best benefits on all types of products</p>
+                        <button onclick="window.location.href='login.html'" class="btn warning" id="back-btn">Login Now</button>
                     </div>
                 </div>
             </div>
