--- a/Login.html
+++ b/Login.html
@@ -19,36 +19,23 @@
     <div align="center" class="header">
         <img class="logo" src="sss/images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
     </div>
-    <!--Top Banner-->
-    <div class="banner">
-        <table>
-            <tr>
-                <td>
-                    <i class="fas fa-shopping-bag" id="promotion_icon"></i>
-                </td>
-                <td>
-                    <div class="slogan">DEBUT OF ULTIMATE MARKETING</div>
-                </td>
-            </tr>
-        </table>
-    </div>
         
-    <section class="blog-banner-area" id="category">
-		<div class="container h-100">
-			<div class="blog-banner">
-				<div class="text-center">
-                    <h2 id="qr_title"><b>Login</b></h2>
-                    <br>
-<!--					<nav aria-label="breadcrumb" class="banner-breadcrumb">-->
-<!--            <ol class="breadcrumb">-->
-<!--              <li class="breadcrumb-item"><a href="#">Home</a></li>-->
-<!--              <li class="breadcrumb-item active" aria-current="page">Login</li>-->
-<!--            </ol>-->
-<!--          </nav>-->
-				</div>
-			</div>
-    </div>
-	</section>
+<!--    <section class="blog-banner-area" id="category">-->
+<!--		<div class="container h-100">-->
+<!--			<div class="blog-banner">-->
+<!--				<div class="text-center">-->
+<!--                    <h2 id="qr_title"><b>Login</b></h2>-->
+<!--                    <br>-->
+<!--&lt;!&ndash;					<nav aria-label="breadcrumb" class="banner-breadcrumb">&ndash;&gt;-->
+<!--&lt;!&ndash;            <ol class="breadcrumb">&ndash;&gt;-->
+<!--&lt;!&ndash;              <li class="breadcrumb-item"><a href="#">Home</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;              <li class="breadcrumb-item active" aria-current="page">Login</li>&ndash;&gt;-->
+<!--&lt;!&ndash;            </ol>&ndash;&gt;-->
+<!--&lt;!&ndash;          </nav>&ndash;&gt;-->
+<!--				</div>-->
+<!--			</div>-->
+<!--    </div>-->
+<!--	</section>-->
 
     <!--Main Content-->
     <section class="login_box_area section-margin">
@@ -57,9 +44,10 @@
 				<div class="col-lg-6">
 					<div class="login_box_img">
 						<div class="hover">
-							<h4>New to our website?</h4>
-							<p>There are advances being made in science and technology everyday, and a good example of this is the</p>
-							<a class="button button-account" href="register.html">Create an Account</a>
+							<h2 class="h2">New to our website?</h2>
+                            <br>
+							<p class="description">There are advances being made in science and technology everyday, and a good example of this is the</p>
+                            <button onclick="window.location.href='register.html'" class="btn warning" id="back-btn">Create an Account</button>
 						</div>
 					</div>
 				</div>
