Changes to product page

--- a/qr.html
+++ b/qr.html
@@ -109,7 +109,7 @@
 
     <div class="login_form_inner">
             <h3>Want to earn more Points?</h3>
-            <button class="btn info shop-item-button" id="game-btn" onclick="window.location.href='gamee.html'">Play Game</button>
+            <button class="btn info shop-item-button" id="game-btn" onclick="window.location.href='GameShopMo.html'">Play Game</button>
     </div>
     <!--    Footer Section-->
     <div class="page-footer-class" id="page-footer-id">
