--- a/Promotions.html
+++ b/Promotions.html
@@ -158,7 +158,7 @@
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/game.jfif" alt="" onclick="window.location.href='gamee.html'">
+                                <img class="card-img" src="images/game.jfif" alt="" onclick="window.location.href='GameShopMo.html'">
                             </div>
                         </div>
                     </div>
