--- a/PaymentPage.html
+++ b/PaymentPage.html
@@ -28,24 +28,40 @@
 
 <div data-role="page" >
 
+    <!--    Categories-->
+    <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            <a  onclick="window.location.href='ProductsFrozen.html'">Frozen food</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Pharmacy</a>
+            <a onclick="window.location.href='Products.html'">Grocery</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Household</a>
+            <a onclick="window.location.href='Products.html'">Liqour</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Beverages</a>
+            <a onclick="window.location.href='Products.html'">Homeware</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">chilled</a>
+            <a onclick="window.location.href='Products.html'">Vegitables</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Meat</a>
+            <a onclick="window.location.href='Products.html'">Fish</a>
+            <a onclick="window.location.href='ProductsFrozen.html'">Fruits</a>
+        </div>
+    </div>
     <!-- Top Navigation -->
+
     <div data-role="header" id="top_navigation" data-position="fixed">
-        <i class="fas fa-th" id="category_icon"></i>
+        <i class="fas fa-th" id="category_icon" onclick="openNav()"></i>
         <div align="center" class="logo">
-            <img class="logo" src="images/shopmologo.png" alt="Image">
-            <i class="fa fa-tags" id="promotion_icon"></i>
+            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
+            <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
         </div>
 
         <div data-role="navbar" id="search">
             <ul>
-                <li style="width:85%">
+                <li style="width:100%">
 
                     <form class="ui-filterable">
                         <input id="myFilter" data-type="search" placeholder="Search for items..">
                     </form>
-                </li>
-                <li id="filter_icon" style="width:15%">
-                    <i class="fas fa-filter"></i>
                 </li>
             </ul>
         </div>
