--- a/HomeDelivery.html
+++ b/HomeDelivery.html
@@ -73,11 +73,41 @@
 
                 <div id="map" style="max-height: 250px" >
                 <script>
+                    var map, infoWindow;
                     function initMap() {
-                        var colombo = {lat: 6.9271, lng: 79.8612};
-                        var map = new google.maps.Map(
-                            document.getElementById('map'), {zoom: 13, center: colombo});
-                        var marker = new google.maps.Marker({position: colombo, map: map});
+                        map = new google.maps.Map(document.getElementById('map'), {
+                            center: {lat: -34.397, lng: 150.644},
+                            zoom: 6
+                        });
+                        infoWindow = new google.maps.InfoWindow;
+
+                        // Try HTML5 geolocation.
+                        if (navigator.geolocation) {
+                            navigator.geolocation.getCurrentPosition(function(position) {
+                                var pos = {
+                                    lat: position.coords.latitude,
+                                    lng: position.coords.longitude
+                                };
+
+                                infoWindow.setPosition(pos);
+                                infoWindow.setContent('Delivery location .');
+                                infoWindow.open(map);
+                                map.setCenter(pos);
+                            }, function() {
+                                handleLocationError(true, infoWindow, map.getCenter());
+                            });
+                        } else {
+                            // Browser doesn't support Geolocation
+                            handleLocationError(false, infoWindow, map.getCenter());
+                        }
+                    }
+
+                    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                        infoWindow.setPosition(pos);
+                        infoWindow.setContent(browserHasGeolocation ?
+                            'Error: The Geolocation service failed.' :
+                            'Error: Your browser doesn\'t support geolocation.');
+                        infoWindow.open(map);
                     }
 
                 </script>
